--- a/index.css
+++ b/index.css
@@ -8,6 +8,11 @@
 
 body {
     font-family: 'Outfit', sans-serif;
+    background-color: hsl(212, 45%, 89%);
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    font-size: 15px;
 }
 
 .container {
@@ -15,8 +20,31 @@ body {
     margin: 0 auto;
 }
 
+.card {
+    background-color: hsl(0, 0%, 100%);
+    padding: 18px;
+    border-radius: 17px;
+    text-align: center;
+    margin: 0 1em;
+}
+
+
 .card img {
     width: 100%;
+    border-radius: 15px;
+}
+
+.text {
+    padding: 22px 10px;
+}
+
+.text h2 {
+    color: hsl(218, 44%, 22%);
+    padding-bottom: 15px;
+}
+
+.text p {
+    color: hsl(220, 15%, 55%);
 }
 
 
